# Cash_machine

./: .env.sample  README.md  pyproject.toml
cash_machine/: models.py  serializers.py  urls.py  utils.py  views.py
cash_machine/fixtures/: items_fixture.json
cash_machine/migrations/: 0001_initial.py
cash_machine/templates/cash_machine/: receipt_template.html
config/: settings.py  urls.py
