[tool.poetry]
name = "sales-receipt"
version = "0.1.0"
description = ""
authors = ["Bloodimirg <bloodimirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
flake8 = "^7.1.2"
black = "^25.1.0"
pdfkit = "^1.0.0"
qrcode = "^8.0"
pillow = "^11.1.0"
drf-yasg = "^1.21.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
